@@ -1,5 +1,8 @@
 Roundware Server v0.3, XXXX-XX-XX (development version)
 ---------------------
+- Fix tag filtering default value
+- Add "Browse" UI Mode for manual browsing of content
+- Add 'description' parameter to add_asset_to_envelope api/1 call
 - Added UPGRADING.md and CHANGELOG.txt
 - Fixed recording_collection._banned asset status function.
 - Created Timed Playlist to manage audiotrack audio instead of relying on move_listener calls.
